# meta

./: .cirrus.yml  .mergify.yml  .pre-commit-config.yaml  Dockerfile  README.md  discover.py  distribution.gv  flake.nix  pyproject.toml  sccache.Dockerfile  test.py
.github/workflows/: test.yml
