[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "meta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  {name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"}
]
requires-python = ">=3.10"
dependencies = [
  "crocoddyl>=3.1.0",
  "graphviz>=0.21",
  "httpx>=0.28.1",
  "ndcurves>=2.1.0",
  "pin>=3.8.0",
  "tsid>=1.9.0"
]
